# voicedev

./: .env.example  .gitignore  .z-ai-config  README.md  eslint.config.mjs  install.ps1  install.sh  package.json
cli/: chat.ts
final_voicedev/: README.md  package.json
final_voicedev/mini-services/ws-service/: package.json
final_voicedev/src/app/api/agents/: route.ts
final_voicedev/src/app/api/channels/: route.ts
final_voicedev/src/app/api/costs/: route.ts
final_voicedev/src/app/api/errors/: route.ts
final_voicedev/src/app/api/events/: route.ts
final_voicedev/src/app/api/export/: route.ts
final_voicedev/src/lib/: features.ts
final_voicedev/src/skills/: index.ts
mini-services/ws-service/: index.ts
prisma/: schema.prisma  seed.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/engine/: anthropic.rs  memory.rs  mod.rs  openai.rs  tools.rs
src-tauri/src/engine/skills/: mod.rs
src-tauri/src/mcp/: mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/marketplace/: route.ts
src/app/api/memory/: route.ts
src/app/api/sessions/: route.ts
src/app/api/usage/: route.ts
src/channels/: index.ts
src/components/: SetupWizard.tsx
src/lib/: ai-providers.ts  utils.ts
src/lib/billing/: stripe.ts
src/marketplace/: index.ts  unified-marketplace.ts
src/pentest/: index.ts
src/providers/: index.ts
src/remote/: index.ts
src/security/: index.ts
src/skills/: browser-use.ts  index.ts
src/tools/: extreme-core.ts  index.ts  local-toolboxes.ts
src/voice/: index.ts
(+6 files in other folders)
